--- a/config.toml
+++ b/config.toml
@@ -57,18 +57,18 @@ sidebar = ["recent_posts", "taxonomy_category", "taxonomy_tags"]
 #################### default parameters ################################
 [params]
 logo = "images/logo.png"
-logo_width = "50px"
+logo_width = "150px"
 # Meta data
 description = "Pamela Young-Jacobs for Columbus County Board of Education"
 author = "Pamela Young-Jacobs"
 # Contact Information
 #mobile = "0124857985320"
-email = "demo@email.com"
+email = "jacobsforboe@gmail.com"
 location = "Bolton, NC"
 # contact form action
-contact_form_action = "#" # contact form works with : https://formspree.io
+contact_form_action = "https://formspree.io/xeqpjzre" # contact form works with : https://formspree.io
 # Google Analitycs
-google_analitycs_id = "" # Your ID# search
+google_analitycs_id = "UA-178061079-1" # Your ID# search
 # multi-author support (if set to true, you must use an Array in the author field)
 multi_author = false
 
@@ -78,44 +78,44 @@ enable = true
 preloader = "" # use .png , .svg or .gif format
 
 # Navigation get start button
-[params.nav_button]
-enable = true
-label = "Get A Quote"
-link = "contact"
+#[params.nav_button]
+#enable = true
+#label = "Get A Quote"
+#link = "contact"
 
 # google map
-[params.gmap]
-enable = true
-gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"
-map_latitude = "51.5223477"
-map_longitude = "-0.1622023"
-map_marker = "images/marker.png"
+#[params.gmap]
+#enable = true
+#gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"
+#map_latitude = "51.5223477"
+#map_longitude = "-0.1622023"
+#map_marker = "images/marker.png"
 
   
 ############################# social site ########################
-[[params.social]]
-icon = "ion-social-googleplus-outline" #ionicon pack v2 : https://ionicons.com/v2/
-link = "#"
+#[[params.social]]
+#icon = "ion-social-googleplus-outline" #ionicon pack v2 : https://ionicons.com/v2/
+#link = "#"
 
 [[params.social]]
 icon = "ion-social-linkedin-outline" #ionicon pack v2 : https://ionicons.com/v2/
-link = "#"
+link = "https://www.linkedin.com/in/pamela-young-jacobs-bis-989b0a36/"
 
-[[params.social]]
-icon = "ion-social-pinterest-outline" #ionicon pack v2 : https://ionicons.com/v2/
-link = "#"
+#[[params.social]]
+#icon = "ion-social-pinterest-outline" #ionicon pack v2 : https://ionicons.com/v2/
+#link = "#"
 
-[[params.social]]
-icon = "ion-social-dribbble-outline" #ionicon pack v2 : https://ionicons.com/v2/
-link = "#"
+#[[params.social]]
+#icon = "ion-social-dribbble-outline" #ionicon pack v2 : https://ionicons.com/v2/
+#link = "#"
 
-[[params.social]]
-icon = "ion-social-twitter-outline" #ionicon pack v2 : https://ionicons.com/v2/
-link = "#"
+#[[params.social]]
+#icon = "ion-social-twitter-outline" #ionicon pack v2 : https://ionicons.com/v2/
+#link = "#"
 
 [[params.social]]
 icon = "ion-social-facebook-outline" #ionicon pack v2 : https://ionicons.com/v2/
-link = "#"
+link = "https://www.facebook.com/PamelaYoungJacobsforCoCoBoE"
 
 
 ################################ English Language ########################
@@ -140,15 +140,15 @@ name = "About"
 URL = "about"
 weight = 2
 
-[[Languages.en.menu.main]]
-name = "Issues"
-URL = "project"
-weight = 3
+#[[Languages.en.menu.main]]
+#name = "Issues"
+#URL = "project"
+#weight = 3
 
-[[Languages.en.menu.main]]
-name = "Volunteer"
-URL = "service"
-weight = 4
+#[[Languages.en.menu.main]]
+#name = "Volunteer"
+#URL = "service"
+#weight = 4
 
 [[Languages.en.menu.main]]
 name = "Contact"
@@ -162,15 +162,15 @@ name = "About"
 URL = "about"
 weight = 1
 
-[[Languages.en.menu.footer]]
-name = "Issues"
-URL = "project"
-weight = 2
+#[[Languages.en.menu.footer]]
+#name = "Issues"
+#URL = "project"
+#weight = 2
 
-[[Languages.en.menu.footer]]
-name = "Volunteer"
-URL = "service"
-weight = 3
+#[[Languages.en.menu.footer]]
+#name = "Volunteer"
+#URL = "service"
+#weight = 3
 
 [[Languages.en.menu.footer]]
 name = "Contact"
